# peltier-control

./: CMakeLists.txt  README.md  arduinoTemp.ino
src/: CMakeLists.txt  PID.cpp  PID.h  bk_test.cpp  peltier_cooling.cpp
